--- a/Statistical Data Analyses.Rmd
+++ b/Statistical Data Analyses.Rmd
@@ -38,8 +38,8 @@ options(scipen=5, digits = 5)
 ```{r, message=F, warning=F, error=F}
 # Reading the file:
 # dir <- "C:/Users/Merav/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
-# dir <- "C:/Users/edena/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
-dir<-"C:/Users/Shahar/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
+dir <- "C:/Users/edena/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
+# dir<-"C:/Users/Shahar/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
 # dir <- "C:/Users/shahars/OneDrive - Playtika Ltd/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
 df <- read_excel(dir, sheet = 1)
 df <- df %>% mutate(DOB = as.Date(DOB)) 
@@ -306,14 +306,12 @@ mdl1 <- glm(is_atopic_first_year ~ SES_group + gender + type_of_pregnancy +
                mother_Atopic_diseases + father_Atopic_diseases +
                mother_year_birth + mother_education + number_of_children + covid_time  , data = df_mdl, family = "binomial")
 
-stargazer(mdl1 , type="html", out="logistic 1 Y.html", out.header=TRUE)
 
 mdl2 <- glm(is_atopic_second_year ~ SES_group + gender + 
              mother_Atopic_diseases + father_Atopic_diseases +
              mother_year_birth + mother_education + number_of_children + 
              type_of_pregnancy  + vaccine_12mo  + nursing_setup_at_12mo + covid_time, data=df_mdl, family='binomial')
 
-stargazer(mdl2 , type="html", out="logistic 2 Y.html", out.header=TRUE)
 # df_mdl$mdl1 <- predict(mdl1)
 # df_mdl$mdl2 <- predict(mdl2)
 # 
@@ -334,19 +332,35 @@ gam1 <- gam(is_atopic_first_year ~ SES_group + gender + type_of_pregnancy +
                mother_year_birth + mother_education + number_of_children +
                s(DOB_count, bs='cr') ,data=df_mdl, family=binomial)
 
-stargazer(gam1 , type="html", out="GAM 1 Y.html", out.header=TRUE)
 
 gam2 <- gam(is_atopic_second_year ~ SES_group + gender + 
              mother_Atopic_diseases + father_Atopic_diseases +
              mother_year_birth + mother_education + number_of_children + 
              type_of_pregnancy  + vaccine_12mo  + nursing_setup_at_12mo + s(DOB_count, bs='cr') ,data=df_mdl, family=binomial)
 
-stargazer(gam1 , type="html", out="GAM 2 Y.html", out.header=TRUE)
+
 # df_mdl$gam1 <- predict.gam(gam1)
 # df_mdl$gam2 <- predict.gam(gam2)
 
 # summary.gam(gam1)
 # summary.gam(gam2)
+```
+
+## stargazer
+```{r}
+stargazer(mdl1 , type="html", out="logistic 1 Y.html", out.header=TRUE)
+
+stargazer(mdl2 , type="html", out="logistic 2 Y.html", out.header=TRUE)
+
+stargazer(gam1 , type="html", out="GAM 1 Y.html", out.header=TRUE)
+
+stargazer(gam1 , type="html", out="GAM 2 Y.html", out.header=TRUE)
+
+stargazer(mdl1,gam1 , type="html", out="1 Y regressions.html", out.header=TRUE)
+
+stargazer(mdl2,gam2 , type="html", out="2 Y regressions.html", out.header=TRUE)
+
+
 ```
 
 # Graphs
@@ -458,7 +472,7 @@ typical_person <- data.frame(SES_group = rep(getmode(SES_group),n),
                              nursing_setup_at_12mo = rep(getmode(nursing_setup_at_12mo),n),
                              vaccine_12mo = rep(getmode(vaccine_12mo),n))
 
-# adding DOB dor each observation 
+# adding DOB for each observation 
 typical_person <- typical_person %>% mutate(DOB = df_mdl$DOB, DOB_count = df_mdl$DOB_count)
 typical_person <- typical_person %>% mutate(Born_at = if_else(DOB_count< g1, 'Up to March19', ifelse(DOB_count<g2, 'March19 - March20', ifelse(DOB_count<g3,'March20 - Feb21','From Feb21'))), covid_time = if_else(DOB_count< g1, 1, ifelse(DOB_count<g2, 2, ifelse(DOB_count<g3,3,4))))
 typical_person$covid_time <- as.factor(typical_person$covid_time)
