--- a/Statistical Data Analyses.Rmd
+++ b/Statistical Data Analyses.Rmd
@@ -38,8 +38,8 @@ options(scipen=5, digits = 5)
 ```{r, message=F, warning=F, error=F}
 # Reading the file:
 # dir <- "C:/Users/Merav/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
-dir <- "C:/Users/edena/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
-# dir<-"C:/Users/Shahar/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
+# dir <- "C:/Users/edena/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
+dir<-"C:/Users/Shahar/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
 # dir <- "C:/Users/shahars/OneDrive - Playtika Ltd/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
 df <- read_excel(dir, sheet = 1)
 df <- df %>% mutate(DOB = as.Date(DOB)) 
@@ -300,12 +300,14 @@ chisq_goodness <- function(kpi){
 ## Logistic regression
 ```{r}
 df_mdl <- df %>% drop_na(SES_group, gender, type_of_pregnancy, mother_education, vaccine_12mo, nursing_setup_at_12mo, 
-                         is_atopic_first_year, is_atopic_second_year)
+                         is_atopic_first_year, is_atopic_second_year) %>% filter(mother_year_birth >1960, mother_year_birth < 2000)
+df_mdl$mother_year_birth = df_mdl$mother_year_birth - 1961
+
 
 mdl1 <- glm(is_atopic_first_year ~ SES_group + gender + type_of_pregnancy +
                mother_Atopic_diseases + father_Atopic_diseases +
-               mother_year_birth + mother_education + number_of_children + covid_time  , data = df_mdl, family = "binomial")
-
+              mother_year_birth + mother_education + number_of_children + covid_time  , data = df_mdl, family = "binomial")
+# 
 
 mdl2 <- glm(is_atopic_second_year ~ SES_group + gender + 
              mother_Atopic_diseases + father_Atopic_diseases +
@@ -320,8 +322,12 @@ mdl2 <- glm(is_atopic_second_year ~ SES_group + gender +
 # df_mdl <- left_join(df_mdl, df_group, by = 'covid_time')
 
 
-# summary(mdl1)
+summary(mdl1)
 # summary(mdl2)
+# predict.glm(mdl1, type='response')
+# sum(predict.glm(mdl1, type='response'))
+# 
+table(df_mdl$mother_year_birth)
 ```
 
 
@@ -331,7 +337,7 @@ gam1 <- gam(is_atopic_first_year ~ SES_group + gender + type_of_pregnancy +
                mother_Atopic_diseases + father_Atopic_diseases +
                mother_year_birth + mother_education + number_of_children +
                s(DOB_count, bs='cr') ,data=df_mdl, family=binomial)
-
+#
 
 gam2 <- gam(is_atopic_second_year ~ SES_group + gender + 
              mother_Atopic_diseases + father_Atopic_diseases +
@@ -342,8 +348,8 @@ gam2 <- gam(is_atopic_second_year ~ SES_group + gender +
 # df_mdl$gam1 <- predict.gam(gam1)
 # df_mdl$gam2 <- predict.gam(gam2)
 
-# summary.gam(gam1)
-# summary.gam(gam2)
+summary.gam(gam1)
+summary.gam(gam2)
 ```
 
 ## stargazer
@@ -402,8 +408,14 @@ ggplot(df_gam1, aes(Date,y, fill = Born_at)) +
   labs(title = 'Connection between DOB and atopic disease', x = 'Date of Birth', y = 'Beta of is_atopic_first_year')
 
 
-# summary(mdl1)
-# summary.gam(gam1)
+summary(mdl1)
+summary.gam(gam1)
+
+table(mother_year_birth)
+
+sum(predict(mdl1))
+
+plot(gam1) #פונקציה של המקדמים של רגרסיית גאם
 ```
 
 # Second year
@@ -444,8 +456,8 @@ ggplot(df_gam2, aes(Date,y, fill = Born_at)) +
   scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
   labs(title = 'Connection between DOB and atopic disease', x = 'Date of Birth', y = 'Beta of is_atopic_first_year')
 
-summary(mdl2)
-summary.gam(gam2)
+# summary(mdl2)
+# summary.gam(gam2)
 ```
 
 # Predictions:
@@ -466,7 +478,7 @@ typical_person <- data.frame(SES_group = rep(getmode(SES_group),n),
                              type_of_pregnancy = rep(getmode(type_of_pregnancy),n),
                              mother_Atopic_diseases = rep(getmode(mother_Atopic_diseases),n),
                              father_Atopic_diseases = rep(getmode(father_Atopic_diseases),n),
-                             mother_year_birth = rep(mean(mother_year_birth),n),
+                             mother_year_birth = rep(mean(df_mdl$mother_year_birth),n),
                              mother_education = rep(getmode(mother_education),n),
                              number_of_children = rep(getmode(number_of_children),n),
                              nursing_setup_at_12mo = rep(getmode(nursing_setup_at_12mo),n),
