--- a/Statistical Data Analyses.Rmd
+++ b/Statistical Data Analyses.Rmd
@@ -307,7 +307,6 @@ df_mdl$mother_year_birth = df_mdl$mother_year_birth - 1961
 mdl1 <- glm(is_atopic_first_year ~ SES_group + gender + type_of_pregnancy +
                mother_Atopic_diseases + father_Atopic_diseases +
               mother_year_birth + mother_education + number_of_children + covid_time  , data = df_mdl, family = "binomial")
-# 
 
 mdl2 <- glm(is_atopic_second_year ~ SES_group + gender + 
              mother_Atopic_diseases + father_Atopic_diseases +
@@ -322,22 +321,22 @@ mdl2 <- glm(is_atopic_second_year ~ SES_group + gender +
 # df_mdl <- left_join(df_mdl, df_group, by = 'covid_time')
 
 
-summary(mdl1)
+# summary(mdl1)
 # summary(mdl2)
 # predict.glm(mdl1, type='response')
 # sum(predict.glm(mdl1, type='response'))
 # 
-table(df_mdl$mother_year_birth)
+# table(df_mdl$mother_year_birth)
 ```
 
 
 ## GAM : 
+
 ```{r}
 gam1 <- gam(is_atopic_first_year ~ SES_group + gender + type_of_pregnancy +
                mother_Atopic_diseases + father_Atopic_diseases +
                mother_year_birth + mother_education + number_of_children +
                s(DOB_count, bs='cr') ,data=df_mdl, family=binomial)
-#
 
 gam2 <- gam(is_atopic_second_year ~ SES_group + gender + 
              mother_Atopic_diseases + father_Atopic_diseases +
@@ -348,8 +347,10 @@ gam2 <- gam(is_atopic_second_year ~ SES_group + gender +
 # df_mdl$gam1 <- predict.gam(gam1)
 # df_mdl$gam2 <- predict.gam(gam2)
 
-summary.gam(gam1)
-summary.gam(gam2)
+# summary.gam(gam1)
+# plot.gam(gam1)
+# summary.gam(gam2)
+# plot.gam(gam2)
 ```
 
 ## stargazer
@@ -387,8 +388,10 @@ df_gam1 <- df_gam1 %>% mutate(Date = as.Date(x + plus,  origin = '1970-01-01'))
 
 ggplot(df_gam1, aes(Date,y, fill = Born_at)) + 
   geom_line(aes(col = Born_at), size = 1) +
-  geom_line(aes(Date, logistic_reg, col = Born_at), size = 1, linetype=2) + 
   geom_ribbon(aes(ymin = y - se*qnorm(0.975), ymax = y + se*qnorm(0.975), y=NULL), alpha = 0.1) +
+  
+  geom_line(aes(Date, logistic_reg, col = Born_at), size = 1, linetype=2) + 
+  geom_ribbon() +
   scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
   labs(title = 'Connection between DOB and atopic disease', x = 'Date of Birth', y = 'Beta of is_atopic_first_year')
 
@@ -408,14 +411,13 @@ ggplot(df_gam1, aes(Date,y, fill = Born_at)) +
   labs(title = 'Connection between DOB and atopic disease', x = 'Date of Birth', y = 'Beta of is_atopic_first_year')
 
 
-summary(mdl1)
-summary.gam(gam1)
-
-table(mother_year_birth)
-
-sum(predict(mdl1))
-
-plot(gam1) #פונקציה של המקדמים של רגרסיית גאם
+# summary(mdl1)
+# summary.gam(gam1)
+# 
+# table(mother_year_birth)
+# sum(predict(mdl1))
+# 
+# plot(gam1) #פונקציה של המקדמים של רגרסיית גאם
 ```
 
 # Second year
